<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connexus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Connexus</string>
    <string name="title_activity_display_images">DisplayImages</string>
    <string name="imagePage">View All Images</string>
    <string name="streamListPage">View All Streams</string>
    <string name="streamPage">View All Streams</string>
    <string name="nearbyPage">View Nearby Streams</string>
    <string name="searchPage">Search Streams</string>
    <string name="uploadImageActivity"> Upload a new image</string>
    <string name="upload_hint_caption">Caption</string>
    <string name="title_activity_image_upload">ImageUpload</string>
    <string name="numOfCols">3</string>



    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="mock_server_has_token">Mock server has refresh token?</string>
    <string name="request_server_auth_code">Request server auth code?</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
    <string name="title_activity_search_stream">SearchStream</string>
    <string name="title_activity_list_streams">ListStreams</string>
    <string name="title_activity_view_stream">ViewStreamActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_view_nearby">ViewNearby</string>
    <string name="SubscribePage">Subsribed Streams</string>

    <!-- View All Stream -->
    <string name="view_all_streams_subscribe">My Subscribed Streams</string>
    <string name="view_all_streams_search_hint">Find Streams</string>
    <string name="view_all_streams_nearby">Nearby</string>

    <!-- Search Page -->
    <string name="search_hint">Keywords</string>
    <string name="search_info">Type in keywords and search for streams</string>
    <string name="search_pre_page">Pre results</string>
    <string name="search_next_page">More results</string>

    <!--Strings for image upload-->
    <string name="private_take_photo">Take a Photo</string>
    <string name="uploadImage">Upload Image</string>
    <string name="upload_hint">Stream Name</string>
    <string name="take_photo">Take a Picture</string>
    <string name="choose_from_library">Choose From Library</string>

    <!--Strings for take photo activity-->
    <string name="take_private_photo_take_photo">Take a Picture</string>
    <string name="take_private_photo_use_photo">Use this picture</string>


    <!--Common Strings-->
    <string name="view_all_streams">Streams</string>
    <string name="connexus_banner">Connexus!</string>
    <string name="nearby_banner">View Nearby Streams</string>
    <string name="upload_banner">Upload to Stream</string>
    <string name="image_pre_page">Pre Page</string> <!--used to turn pages for images-->
    <string name="image_next_page">More Images</string>
    <string name="search_btn">Search</string>
    <string name="stream_pre_page">Pre Page</string>
    <string name="stream_next_page">More Streams</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_take_photo">Take a photo to upload</string>
    <string name="return_to_all_stream_take_private_photo"> Streams</string>
    <string name="title_activity_view_subscribed">ViewSubscribed</string>
    <string name="title_activity_view_all_stream">View all streams</string>

</resources>
