<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aptdemo.yzhao.androiddemo.ViewStreamActivity"
    android:orientation="vertical"
    android:id="@+id/view_stream_layout">

    <TextView
        android:id="@+id/view_a_stream_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/banner_font"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text="@string/connexus_banner"/>
    <TextView
        android:id="@+id/view_a_stream_stream_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/stream_name_font"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text="View A Stream"
        android:visibility="visible"/>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view_a_stream_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:columnWidth="120dp"
        android:numColumns="@string/numOfCols"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view_a_stream_navigate"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/view_a_stream_pre_page"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/image_pre_page"
            android:visibility="invisible"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/view_a_stream_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_next_page"
            android:visibility="invisible"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadImageActivity"
        android:id="@+id/open_image_upload_page"
        android:visibility="gone"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_streams"
        android:id="@+id/view_a_stream_all_streams"/>


</LinearLayout>
