<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aptdemo.yzhao.androiddemo.ViewNearby">
    <TextView
        android:id="@+id/nearby_streams_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/banner_font"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text="@string/nearbyBanner"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_below="@id/nearby_streams_banner"
        android:layout_above="@+id/nearby_all_streams"
        >
        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/nearby_gridview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnWidth="90dp"
            android:numColumns="@string/numOfCols"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/nearby_navigate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/nearby_pre_page"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/search_pre_page"
                android:visibility="invisible"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/nearby_next_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_next_page"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_streams"
        android:id="@id/nearby_all_streams"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
