<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aptdemo.yzhao.androiddemo.ViewAllStream">
    <TextView
        android:id="@+id/view_all_streams_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/banner_font"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text="@string/connexus_banner"/>
    <GridView
        android:id="@+id/view_all_streams_gridview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/view_all_streams_banner"
        android:layout_above="@+id/view_all_streams_buttons"
        android:columnWidth="90dp"
        android:numColumns="@string/numOfCols"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
    <LinearLayout
        android:id="@id/view_all_streams_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/view_all_streams_buttrons_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:id="@+id/view_all_streams_search"
                android:layout_width = "wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/view_all_streams_search_text"
                    android:layout_width="@dimen/view_all_stream_search_box_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/view_all_streams_search_hint"
                    android:textSize="@dimen/view_all_stream_btn_font_size"
                    android:inputType="textAutoComplete"
                    android:completionThreshold="1"
                    android:drawableLeft="@drawable/search"
                    android:background="@drawable/border_style"/>
                <Button
                    android:id="@+id/view_all_streams_search_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/search_text"
                    android:text="@string/search_btn"
                    android:textSize="@dimen/view_all_stream_btn_font_size"
                    android:background="@drawable/border_style"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/view_all_streams_nearby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_all_streams_nearby"
                android:textSize="@dimen/view_all_stream_btn_font_size"
                android:drawableTop="@drawable/neaby_btn"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <Button
            android:id="@+id/view_all_streams_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/view_all_stream_btn_font_size"
            android:visibility="visible"
            android:background="@drawable/border_style"/>
    </LinearLayout>
</RelativeLayout>
