<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aptdemo.yzhao.androiddemo.TakePhotoActivity">
    <TextView
        android:id="@+id/take_photo_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/banner_font"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text="@string/connexus_banner"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/take_photo_camera_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/take_photo_banner"
        android:layout_above="@+id/take_photo_btns"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/take_photo_display_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/take_photo_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:layout_above="@+id/take_photo_return_to_streams">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/take_photo_take_picture"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/take_private_photo_take_photo"
            android:textSize="@dimen/take_photo_btn_font_size"
            android:drawableTop="@drawable/camera"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/take_photo_use_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/take_photo_take_picture"
            android:text="@string/take_private_photo_use_photo"
            android:textSize="@dimen/take_photo_btn_font_size"
            android:drawableTop="@drawable/like"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@id/take_photo_return_to_streams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/view_all_streams"
        android:textSize="@dimen/stream_btn_font_size"
        android:drawableLeft="@drawable/grid"
        android:drawablePadding="10dp"
        android:background="@drawable/border_style"/>

</RelativeLayout>
